crates/uv-lock/src/lock/snapshots/uv_lock__lock__tests__missing_dependency_source_version_unambiguous.snap
---
source: crates/uv-lock/src/lock/mod.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease: Prerelease {
                global: IfNecessary,
                package: PrereleasePackage(
                    {},
                ),
            },
            fork_strategy: RequiresPython,
            minimum_libc_version: None,
            exclude_newer: ExcludeNewer {
                global: None,
                package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "a",
                    ),
                    version: Some(
                        "0.1.0",
                    ),
                    source: Registry(
                        Url(
                            UrlString(
                                "https://pypi.org/simple",
                            ),
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Sha256(
                                    "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                            upload_time: None,
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                default_groups: None,
                group_requires_python: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
            Package {
                id: PackageId {
                    name: PackageName(
                        "b",
                    ),
                    version: Some(
                        "0.1.0",
                    ),
                    source: Registry(
                        Url(
                            UrlString(
                                "https://pypi.org/simple",
                            ),
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Sha256(
                                    "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                            upload_time: None,
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [
                    Dependency {
                        package_id: PackageId {
                            name: PackageName(
                                "a",
                            ),
                            version: Some(
                                "0.1.0",
                            ),
                            source: Registry(
                                Url(
                                    UrlString(
                                        "https://pypi.org/simple",
                                    ),
                                ),
                            ),
                        },
                        index: PackageIndex(
                            0,
                        ),
                        extra: {},
                        simplified_marker: SimplifiedMarkerTree(
                            true,
                        ),
                        complexified_marker: python_full_version >= '3.12',
                    },
                ],
                optional_dependencies: {},
                dependency_groups: {},
                default_groups: None,
                group_requires_python: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "a",
                ),
                version: Some(
                    "0.1.0",
                ),
                source: Registry(
                    Url(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                ),
            }: PackageIndex(
                0,
            ),
            PackageId {
                name: PackageName(
                    "b",
                ),
                version: Some(
                    "0.1.0",
                ),
                source: Registry(
                    Url(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                ),
            }: PackageIndex(
                1,
            ),
        },
        workspace_members: {},
        manifest: ResolverManifest {
            members: {},
            default_groups: None,
            group_requires_python: {},
            requirements: {},
            dependency_groups: {},
            dependency_group_includes: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
